# graph3D

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
resources/: basic.frag  basic.vert
resources/images/: need-for-speed-carbon.dds
resources/modelos/backpack/: backpack.gltf  backpack.mtl
resources/modelos/porsche/: license.txt  scene.gltf
resources/modelos/sponza/: 003_baseColor.ktx  1219024358953944284.ktx  2051777328469649772.ktx  2185409758123873465.ktx  2299742237651021498.ktx  2411100444841994089.ktx  2775690330959970771.ktx  2969916736137545357.ktx  3371964815757888145.ktx  3455394979645218238.ktx  3628158980083700836.ktx  3827035219084910048.ktx  4477655471536070370.ktx  4601176305987539675.ktx  466164707995436622.ktx  4675343432951571524.ktx  4871783166746854860.ktx  4975155472559461469.ktx  5061699253647017043.ktx  5792855332885324923.ktx  5823059166183034438.ktx  6047387724914829168.ktx  6151467286084645207.ktx  6667038893015345571.ktx  6772804448157695701.ktx  7056944414013900257.ktx  715093869573992647.ktx  7268504077753552595.ktx  7441062115984513793.ktx  755318871556304029.ktx  759203620573749278.ktx  7645212358685992005.ktx  7815564343179553343.ktx  8006627369776289000.ktx  8051790464816141987.ktx  8114461559286000061.ktx  8481240838833932244.ktx  8503262930880235456.ktx  8747919177698443163.ktx  8750083169368950601.ktx  (+5 more)
src/: Base.hpp  BasicComponents.hpp  Camera.cpp  Camera.hpp  Components.hpp  Constants.hpp  Entity.cpp  Entity.hpp  GLApiVersions.hpp  GLObjects.cpp  GLObjects.hpp  Input.cpp  Input.hpp  Material.cpp  Material.hpp  MaterialTypes.hpp  Mesh.cpp  Mesh.h  Mesh.hpp  MeshRenderer.cpp  MeshRenderer.hpp  Model.cpp  Model.hpp  RandomHelper.hpp  RenderCapabilities.cpp  RenderCapabilities.hpp  Renderer.cpp  Renderer.hpp  Resource.hpp  Scene.cpp  Scene.hpp  SceneObject.cpp  SceneObject.hpp  Shader.cpp  Shader.hpp  ShaderBuilder.cpp  ShaderBuilder.hpp  ShaderCode.cpp  ShaderCode.hpp  ShaderObject.cpp  (+21 more)
